# cseg

./: README.md  SentenceTex.hs  cseg.cabal  cseg.hs
